Fix menu component icon overflow by removing padding

--- a/engines/neo_component/app/assets/stylesheets/menu_component.tailwind.css
+++ b/engines/neo_component/app/assets/stylesheets/menu_component.tailwind.css
@@ -2,7 +2,7 @@
   @apply relative inline-block h-6 w-6 md:h-7 md:w-7;
 }
 .menu-component-button {
-  @apply flex justify-center cursor-pointer rounded-full bg-primary-light-50 text-primary border border-primary hover:bg-primary-light hover:text-white p-0.5 h-full w-full;
+  @apply flex justify-center cursor-pointer rounded-full bg-primary-light-50 text-primary border border-primary hover:bg-primary-light hover:text-white h-full w-full;
 }
 
 .menu-component-button-active {
